using UnityEngine;

public interface IShootable
{
    void InstantiateProperty(GameEntity entity, Vector3 position, Quaternion rotation);
}
