@startuml ClassDiagram
' ステレオタイプの色設定
skinparam class {
    BackgroundColor<<MonoBehaviour>> LightBlue
    BackgroundColor<<ScriptableObject>> LightGreen
    BackgroundColor<<Interface>> LightYellow
    BackgroundColor<<static>> LightGray
}

' --- インターフェース定義 ---
interface IMovable <<Interface>>
interface IShootable <<Interface>>

' --- マネージャー ---
class DanmakuGameManager <<MonoBehaviour>> {
    +Instance : DanmakuGameManager
    +GameOver()
}

' --- エンティティ基盤 ---
abstract class EntityController <<MonoBehaviour>> {
    #_entity : GameEntity
    +Property : GameEntityProperty
    +ParentActor : EntityController
    +Initialize(GameEntity)
    +InstantiateProperty(GameEntity, Vector3, Quaternion)
}
IMovable <|.. EntityController
IShootable <|.. EntityController

class GameEntity <<ScriptableObject>> {
    +Prefab : GameObject
    #property : GameEntityProperty
}
EntityController o-- GameEntity : "_entity"

class GameEntityProperty <<ScriptableObject>> {
    #shootPattern : PatternBase
    #movePattern : PatternBase
}
GameEntity o-- "1" GameEntityProperty : "property"


' --- Player ---
class PlayerController <<MonoBehaviour>> {
    -hitboxMarker : GameObject
    +OnHit()
}
EntityController <|-- PlayerController
PlayerController ..> DanmakuGameManager : "calls GameOver"

class Player <<ScriptableObject>>
GameEntity <|-- Player

class PlayerProperty <<ScriptableObject>> {
    +MoveSpeed : float
    +MoveSpeedSlow : float
    +ShotInterval : float
    +ShotPatternNormal : PatternBase
    +ShotPatternSlow : PatternBase
}
GameEntityProperty <|-- PlayerProperty
PlayerProperty o-- "shotPatternNormal" PatternBase
PlayerProperty o-- "shotPatternSlow" PatternBase
PlayerController ..> PlayerProperty : "uses"


' --- Enemy ---
class EnemyController <<MonoBehaviour>> {
    +MaxHealth : float
    +CurrentHealth : float
    +TakeDamage(float)
}
EntityController <|-- EnemyController

class Enemy <<ScriptableObject>>
GameEntity <|-- Enemy

class EnemyProperty <<ScriptableObject>> {
    +MaxHealth : int
}
GameEntityProperty <|-- EnemyProperty
EnemyController ..> EnemyProperty : "uses"


' --- Bullet ---
class BulletController <<MonoBehaviour>> {
    - _isPlayerShot : bool
    +Initialize(GameEntity, EntityController)
}
EntityController <|-- BulletController
BulletController ..> EnemyController : "calls TakeDamage"

class Bullet <<ScriptableObject>>
GameEntity <|-- Bullet

class BulletProperty <<ScriptableObject>> {
    +LifeTime : float
    +AttackPower : float
}
GameEntityProperty <|-- BulletProperty
BulletController ..> BulletProperty : "uses"


' --- パターン関連 ---
abstract class PatternBase <<ScriptableObject>> {
    +Execute(EntityController, CancellationToken) : UniTask
    #ExecuteImpl(EntityController, CancellationToken) : UniTask
}
GameEntityProperty o-- "shootPattern" PatternBase
GameEntityProperty o-- "movePattern" PatternBase
PatternBase ..> EntityController : "uses"

abstract class MovePatternBase <<ScriptableObject>>
PatternBase <|-- MovePatternBase
class StraightMovePattern <<ScriptableObject>>
class CurveMovePattern <<ScriptableObject>>
class SatelliteMovePattern <<ScriptableObject>>
MovePatternBase <|-- StraightMovePattern
MovePatternBase <|-- CurveMovePattern
MovePatternBase <|-- SatelliteMovePattern

abstract class ShootPatternBase <<ScriptableObject>> {
    #_entity : GameEntity
    #emissionShape : EmissionShape
    +ExecuteShoot(EntityController, CancellationToken) : UniTask
}
PatternBase <|-- ShootPatternBase
ShootPatternBase o-- EmissionShape : "emissionShape"

class BasicShotPattern <<ScriptableObject>>
class MultiWayPattern <<ScriptableObject>>
class RotatingShotPattern <<ScriptableObject>>
class ScatteringPattern <<ScriptableObject>>
ShootPatternBase <|-- BasicShotPattern
ShootPatternBase <|-- MultiWayPattern
ShootPatternBase <|-- RotatingShotPattern
ShootPatternBase <|-- ScatteringPattern

' --- コンポジットパターン ---
class LoopPattern <<ScriptableObject>>
class ParallelPattern <<ScriptableObject>>
class SequencePattern <<ScriptableObject>>
PatternBase <|-- LoopPattern
PatternBase <|-- ParallelPattern
PatternBase <|-- SequencePattern
LoopPattern o-- "1" PatternBase : "pattern"
ParallelPattern o-- "*" PatternBase : "patterns"
SequencePattern o-- "*" PatternBase : "patterns"

' --- 単独パターン ---
class FireAndForgetPattern <<ScriptableObject>>
class ForgetPattern <<ScriptableObject>>
PatternBase <|-- FireAndForgetPattern
PatternBase <|-- ForgetPattern

' --- 発生源シェイプ ---
abstract class EmissionShape <<ScriptableObject>> {
    +GetEmissions(EntityController) : List<EmissionData>
}
class PointEmissionShape <<ScriptableObject>>
class LineEmissionShape <<ScriptableObject>>
class PlaneEmissionShape <<ScriptableObject>>
EmissionShape <|-- PointEmissionShape
EmissionShape <|-- LineEmissionShape
EmissionShape <|-- PlaneEmissionShape

' --- 共有リソース関連 ---
abstract class SharedResource <<ScriptableObject>>
abstract class "SharedResource<T>" as SharedResource_T <<ScriptableObject>>
class SharedAngle <<ScriptableObject>>
SharedResource <|-- SharedResource_T
SharedResource_T <|-- SharedAngle
note right of SharedAngle : T = float

MultiWayPattern ..> SharedAngle : "uses (optional)"
RotatingShotPattern ..> SharedAngle : "uses (optional)"

' --- その他 ---
class EnemyLifeGaugeController <<MonoBehaviour>>
class EmissionData
class AngleUtility <<static>>

EnemyController ..> EnemyLifeGaugeController : "creates"
EnemyLifeGaugeController --> EnemyController : "observes"
ShootPatternBase ..> EmissionData : "creates"
AngleUtility ..> PlayerController : "finds"

@enduml
